removing duplicate gtm iframe snippet

--- a/sections/targeted-page.liquid
+++ b/sections/targeted-page.liquid
@@ -6,7 +6,7 @@
 
 
 <img src="{{ 'targeted-therapy.jpg' | asset_url }}" style="display: none;" loading="lazy" />
-	<div class="photo-headerBG" style="background-image:url({{ 'targeted-therapy.jpg' | asset_url }}); background-position: 50% 0; ">
+	<div class="photo-headerBG" style="background-image:url('https://cdn.shopify.com/s/files/1/0026/7229/6025/files/26A4742_1_e1d3fdee-361a-4d3a-b7b5-d977f3372b76.jpg?v=1676898998'); background-position: 50% 0; ">
 		<div class="ph-width">
 			<div class="ph-text">
 				<cms id='cms0'>
