--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -30,7 +30,11 @@
           <div class="pot-col-100 hideMe" id="splititCol">
             <a href="javascript:void(0)" class="pot-close"><img src="{{ 'close.svg' | asset_url }}" alt="Close" style="width: 15" height="15" loading="lazy"/ ></a>
             <img src="{{ 'splitit.svg' | asset_url }}" width="85" alt="SplitIt" loading="lazy" />
-            <span data-ml="splitItText"><ul><li>0% interest</li><li>Monthly payments on your existing credit card</li><li>Keep earning rewards from your credit card</li><li>No credit check needed to qualify</li><li>Choose from 2-12 month payment plans.</li></ul></span>
+            <span data-ml="splitItText"><p>Splitit helps consumers use their existing credit card to turn purchases into smaller, monthly payments.</p>
+            <p>The full amount of your purchase is authorized (held) on your credit card to guarantee future payments so you need to have at least that amount in available credit on your card.</p>
+            <p>The authorization amount reduces with each monthly payment you make until the balance is cleared and we renew these authorizations periodically. The previous authorization is removed as soon as we receive a new one.</p>
+            For more info,
+            <a href="https://support.splitit.com/hc/en-us/requests/new" target="_blank">Contact Splitit Support</a></span>
             <p class="fineprint">You can choose this option at checkout.</p>
           </div>
           <div class="pot-col-100 hideMe" id="breadCol">
