affiliate landing page

--- a/sections/headsuphealth-page.liquid
+++ b/sections/headsuphealth-page.liquid
@@ -2,14 +2,12 @@
   rel="stylesheet"
   href="{{ 'section-main-page.css' | asset_url }}"
   media="print"
-  onload="this.media='all'"
-/>
+  onload="this.media='all'" />
 <link
   rel="stylesheet"
   href="{{ 'component-rte.css' | asset_url }}"
   media="print"
-  onload="this.media='all'"
-/>
+  onload="this.media='all'" />
 {{ "headsup.css" | asset_url | stylesheet_tag }}
 
 <noscript>{{ "section-main-page.css" | asset_url | stylesheet_tag }}</noscript>
@@ -20,26 +18,16 @@
   <div class="container">
     <div class="inner-content row">
       <div class="col-12">
-        <img
-          src="{{ 'headsuplogo.png' | asset_url }}"
-          alt=""
-          width="415"
-          height="66"
-          loading="lazy"
-        />
         <div class="lp-element lp-pom-text nlh" id="lp-pom-text-52">
           <h2 style="line-height: 35px">
-            OPTIMIZE YOUR SAUNA SESSIONS<br />
+            OPTIMIZE YOUR SAUNA SESSIONS<br/>
             WITH HEADS UP
           </h2>
           <p class="mono-type">
             Free 90-day app membership with your purchase over $999.
           </p>
         </div>
-        <a
-          class="btn-cta"
-          href="/pages/infrared-saunas"
-          >SHOP NOW
+        <a class="btn-cta" href="/pages/infrared-saunas">SHOP NOW
         </a>
       </div>
     </div>
@@ -53,8 +41,8 @@
         <p>
           Heads Up helps you create customized dashboards that track your health
           data over time. Measure what is most important to you and find out how
-          your sauna, physical activity, diet, lifestyle, and more are impacting
-          the big picture.
+                                                  your sauna, physical activity, diet, lifestyle, and more are impacting
+                                                  the big picture.
         </p>
       </div>
       <div class="col-5">
@@ -63,8 +51,7 @@
           alt=""
           width="450"
           height="337"
-          loading="lazy"
-        />
+          loading="lazy" />
       </div>
     </div>
   </div>
@@ -74,7 +61,10 @@
     <h2 class="text-uppercase">How It Works</h2>
     <div class="row">
       <div class="col-4">
-        <img src="{{ 'track.png' | asset_url }}" alt="" loading="lazy" />
+        <img
+          src="{{ 'track.png' | asset_url }}"
+          alt=""
+          loading="lazy" />
         <h3>Track What Matters</h3>
         <p>
           Choose from dozens of advanced health metrics, including deep sleep,
@@ -82,7 +72,10 @@
         </p>
       </div>
       <div class="col-4">
-        <img src="{{ 'sync.png' | asset_url }}" alt="" loading="lazy" />
+        <img
+          src="{{ 'sync.png' | asset_url }}"
+          alt=""
+          loading="lazy" />
         <h3>Sync your Devices</h3>
         <p>
           Choose from dozens of advanced health metrics, including deep sleep,
@@ -90,7 +83,10 @@
         </p>
       </div>
       <div class="col-4">
-        <img src="{{ 'import.png' | asset_url }}" alt="" loading="lazy" />
+        <img
+          src="{{ 'import.png' | asset_url }}"
+          alt=""
+          loading="lazy" />
         <h3>Import Your Records</h3>
         <p>
           Choose from dozens of advanced health metrics, including deep sleep,
@@ -100,7 +96,10 @@
     </div>
     <div class="row">
       <div class="col-4">
-        <img src="{{ 'visualize.png' | asset_url }}" alt="" loading="lazy" />
+        <img
+          src="{{ 'visualize.png' | asset_url }}"
+          alt=""
+          loading="lazy" />
         <h3>Visualize Your Progress</h3>
         <p>
           Get valuable insights anytime with beautiful and actionable
@@ -108,7 +107,10 @@
         </p>
       </div>
       <div class="col-4">
-        <img src="{{ 'tailor.png' | asset_url }}" alt="" loading="lazy" />
+        <img
+          src="{{ 'tailor.png' | asset_url }}"
+          alt=""
+          loading="lazy" />
         <h3>Tailor Your Medical Care</h3>
         <p>
           Give your healthcare team the data they need to personalize their
@@ -116,7 +118,10 @@
         </p>
       </div>
       <div class="col-4">
-        <img src="{{ 'improve.png' | asset_url }}" alt="" loading="lazy" />
+        <img
+          src="{{ 'improve.png' | asset_url }}"
+          alt=""
+          loading="lazy" />
         <h3>Keep Improving</h3>
         <p>Goal setting and progress monitoring help you stay motivated.</p>
       </div>
@@ -132,12 +137,8 @@
         <p>
           Heads Up works with most major fitness trackers including Apple
           Health, Oura, Fitbit, MyFitnessPal, and more. Visit their website for
-          a
-          <a
-            href="https://headsuphealth.com/integrations/"
-            target="_blank"
-            >full list of compatible devices</a
-          >. SaunaSpace recommends fitness trackers with airplane mode for use
+                                                  a
+          <a href="https://headsuphealth.com/integrations/" target="_blank">full list of compatible devices</a>. SaunaSpace recommends fitness trackers with airplane mode for use
           with the EMF Shield in the Faraday Infrared Sauna.
         </p>
       </div>
@@ -150,7 +151,10 @@
     <h2 class="text-uppercase">Anthony Kunkel's Story</h2>
     <div class="row">
       <div class="col-5">
-        <img src="{{ 'anthony.png' | asset_url }}" alt="" loading="lazy" />
+        <img
+          src="{{ 'anthony.png' | asset_url }}"
+          alt=""
+          loading="lazy" />
       </div>
       <div class="col-7">
         <p class="mono-type cta-text">
@@ -161,7 +165,7 @@
           using the Faraday sauna gives me 10-15 more points, around 200 total.
         </blockquote>
         <p>
-          - Anthony Kunkel<br />
+          - Anthony Kunkel<br/>
           Ultramarathon runner and coach
         </p>
       </div>
@@ -175,17 +179,13 @@
       <div class="col-5"></div>
       <div class="col-7">
         <h2>
-          Custom health Tracking,<br />
+          Custom health Tracking,<br/>
           Free For 90 Days*
         </h2>
         <p class="mono-type">
           Optimize your sauna sessions and your health with Heads Up today.
         </p>
-        <a
-          href="/pages/infrared-saunas"
-          class="btn-cta"
-          >SHOP NOW TO START TRACKING</a
-        >
+        <a href="/pages/infrared-saunas" class="btn-cta">SHOP NOW TO START TRACKING</a>
       </div>
     </div>
     <div class="row cta-text">
@@ -197,10 +197,34 @@
   </div>
 </div>
 
-{% schema %} { "name": "t:sections.main-page.name", "tag": "section", "class":
-"section", "settings": [ { "type": "header", "content":
-"t:sections.all.padding.section_padding_heading" }, { "type": "range", "id":
-"padding_top", "min": 0, "max": 100, "step": 4, "unit": "px", "label":
-"t:sections.all.padding.padding_top", "default": 36 }, { "type": "range", "id":
-"padding_bottom", "min": 0, "max": 100, "step": 4, "unit": "px", "label":
-"t:sections.all.padding.padding_bottom", "default": 36 } ] } {% endschema %}
+{% schema %}
+  {
+    "name": "t:sections.main-page.name",
+    "tag": "section",
+    "class": "section",
+    "settings": [
+      {
+        "type": "header",
+        "content": "t:sections.all.padding.section_padding_heading"
+      }, {
+        "type": "range",
+        "id": "padding_top",
+        "min": 0,
+        "max": 100,
+        "step": 4,
+        "unit": "px",
+        "label": "t:sections.all.padding.padding_top",
+        "default": 36
+      }, {
+        "type": "range",
+        "id": "padding_bottom",
+        "min": 0,
+        "max": 100,
+        "step": 4,
+        "unit": "px",
+        "label": "t:sections.all.padding.padding_bottom",
+        "default": 36
+      }
+    ]
+  }
+{% endschema %}
